# Structures_lab_4

./: CMakeLists.txt  CMakePresets.json  linked_list.c  linked_list.h  linked_two_way_list.c  linked_two_way_list.h  main.c  test_runner.py
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml
